--- a/Project6/backend/.env
+++ b/Project6/backend/.env
@@ -1,2 +1,5 @@
 PORT=5001
 MONGODB_URI=mongodb+srv://souravroy200418:wI2sc4Kckvjtgm3p@cluster0.ewefxro.mongodb.net/notes_db?retryWrites=true&w=majority&appName=Cluster0
+
+UPSTASH_REDIS_REST_URL="https://adapted-poodle-42375.upstash.io"
+UPSTASH_REDIS_REST_TOKEN="AaWHAAIjcDFlMmQzYmU1MjViZjc0NzNkYTMyM2NkNjg4NmM2NTkyZXAxMA"
