--- a/Project6/backend/package.json
+++ b/Project6/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "dotenv": "^17.0.1",
     "express": "^4.18.2",
     "mongoose": "^8.16.1",
